--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "template-webpack-eslint-prettier",
+  "name": "completionist-fam-discord-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js",
-    "server": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "css-loader": "^6.10.0",
+    "discord.js": "^14.14.1",
     "html-webpack-plugin": "^5.6.0",
     "jquery": "^3.7.1",
     "postcss-loader": "^8.1.0",
