--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "html-webpack-plugin": "^5.6.0",
     "jquery": "^3.7.1",
+    "mongoose": "^8.3.3",
     "postcss-loader": "^8.1.0",
     "style-loader": "^3.3.4",
     "webpack-cli": "^5.1.4",
